--- a/index.html
+++ b/index.html
@@ -11,107 +11,111 @@
 
 </head>
 <body>
-<section class="gallery">
-    <!-- Slider main container -->
-<div class="swiper">
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide">
-        <img src="./content/budapest1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/budapest2.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/budapest3.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/budapest5.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/budapest6.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/greece1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/greece2.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/greece3.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/hungary1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/landscape1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/malmo1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/other1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/other2.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/other3.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/other4.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/other5.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/other6.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/poland1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/poland2.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/portugal1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/serbia1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/spider.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/sweden2.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/sweden3.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/veszprem1.jpeg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/warsaw1.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/warsaw2.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/warsaw3.jpg" alt="" loading="lazy">
-      </div>
-      <div class="swiper-slide">
-        <img src="./content/xmass.JPG" alt="" loading="lazy">
-      </div>
+    <div class="page-wrap">
+        <div class="home-slider">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    
+                    <div class="swiper-slide" >
+                        <img src="./content/budapest1.jpeg" alt="" loading="lazy">
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/budapest2.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/budapest3.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/budapest5.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/budapest6.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/greece1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/greece2.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/greece3.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/hungary1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/landscape1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/malmo1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/other1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/other2.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/other3.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/other4.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/other5.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/other6.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/poland1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/poland2.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/portugal1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/serbia1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/spider.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/sweden2.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/sweden3.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/veszprem1.jpeg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/warsaw1.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/warsaw2.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/warsaw3.jpg" alt="" loading="lazy" >
+                    </div>
+                    <div class="swiper-slide" >
+                        <img src="./content/xmass.JPG" alt="" loading="lazy" >
+                    </div>
+                </div>
+                
+                <!-- Add Scrollbar -->
+                <div class="swiper-button-next swiper-button-white"></div>
+                <div class="swiper-button-prev swiper-button-white"></div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+        </div>
     </div>
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
-    <!-- Add Scrollbar -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-</div>
-</section>
     <script src="app.js"></script>
 
 </body>
