--- a/index.html
+++ b/index.html
@@ -119,12 +119,100 @@
                     </div>
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
-
-
-
                 </div>
 
             </div>
+        </div>
+        <div class="gallery">
+            <ul>
+
+                <li>
+                    <img src="./content/budapest2.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/budapest3.jpg" alt="" loading="lazy">
+                </li>
+
+                <li>
+                    <img src="./content/budapest5.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/budapest6.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/greece1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/greece2.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/greece3.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/hungary1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/landscape1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/malmo1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/other1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/other2.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/other3.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/other4.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/other5.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/other6.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/poland1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/poland2.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/portugal1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/serbia1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/spider.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/sweden2.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/sweden3.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/veszprem1.jpeg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/warsaw1.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/warsaw2.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/warsaw3.jpg" alt="" loading="lazy">
+                </li>
+                <li>
+                    <img src="./content/xmass.JPG" alt="" loading="lazy">
+                </li>
+
+            </ul>
         </div>
     </div>
     <script src="app.js"></script>
